[tool.poetry]
name = "three-layered-demo-project"
version = "0.1.0"
description = ""
authors = ["Plabon Shaha <plabonshaha106@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "4.45.0"
fastapi = "0.115.6"
python-dotenv = "^1.0.1"
sqlalchemy = "2.0.36"
uvicorn = "0.34.0"
virtualenv = "20.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
