[tool.poetry]
name = "three-layered-demo-project"
version = "0.1.0"
description = ""
authors = ["TIZadid <talhazadid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.6"
paramiko = "3.5.0"
pydantic = "2.10.5"
pydantic-core = "2.27.2"
python-dateutil = "2.8.2"
psycopg2-binary = "2.9.10"
starlette = "0.41.3"
uvicorn = "0.34.0"
python-dotenv = "1.0.1"
dependency-injector = "4.45.0"
virtualenv = "20.28.1"
sqlalchemy = "2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
